{
    "name": "Controllers",
    "maps": [
        {
            "name": "GameControllers",
            "id": "02b2eea7-d7a5-4a5b-bcec-c8a1abcfa0c1",
            "actions": [
                {
                    "name": "FireButton",
                    "type": "Button",
                    "id": "e3d23491-05e8-40bc-98bd-dc775dc522e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotationMove",
                    "type": "Value",
                    "id": "f16c6cbe-d68f-40c8-a7f9-66e6b80967be",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "ForwardMove",
                    "type": "Value",
                    "id": "68453244-8a07-4f95-a4e8-f3fc53d384fe",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8e5dbb1-340a-4a19-8d63-d703974f466c",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FireButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "a014f2a2-9b99-4beb-97c2-aedc01bf0dec",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "b4092bda-201c-4e28-ab1e-c1d71a99143d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "1a576002-cb81-409c-926b-308081331e09",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": " 1D Axis Aternative",
                    "id": "c86313ab-15d7-4728-aa57-22b758cfa8ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "7c3d45eb-86bd-4abe-8c90-f06ff6196ab3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "1a46e839-6731-4371-813a-3b474d21d289",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "61c2b177-69ed-4130-b16c-af3c2ed43deb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00daa275-c92a-4553-b1d5-b87844d3ccf6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}